// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscriptions reducer should handle DELETE_MANIFEST_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": Object {
    "humanized": Object {
      "action": "ManifestRefresh",
    },
    "id": "12345",
  },
}
`;

exports[`Subscriptions reducer should handle DELETE_SUBSCRIPTIONS_FAILURE 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle DELETE_SUBSCRIPTIONS_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle DELETE_SUBSCRIPTIONS_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": Object {
    "humanized": Object {
      "action": "ManifestRefresh",
    },
    "id": "12345",
  },
}
`;

exports[`Subscriptions reducer should handle REFRESH_MANIFEST_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": Object {
    "humanized": Object {
      "action": "ManifestRefresh",
    },
    "id": "12345",
  },
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_CLOSE_DELETE_MODAL 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_COLUMNS_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [
    "col1",
    "col2",
    "col3",
  ],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_DISABLE_DELETE_BUTTON 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_ENABLE_DELETE_BUTTON 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": false,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_FAILURE 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": false,
  "manifestActionStarted": false,
  "missingPermissions": undefined,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_OPEN_DELETE_MODAL 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": true,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_POLL_TASK_FAILURE 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_POLL_TASK_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": Object {
    "humanized": Object {
      "action": "ManifestRefresh",
    },
    "id": "12345",
  },
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_QUANTITIES_FAILURE 1`] = `
Object {
  "availableQuantities": Object {},
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_QUANTITIES_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": true,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_QUANTITIES_SUCCESS 1`] = `
Object {
  "availableQuantities": "some-quantities-data",
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_RESET_TASKS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_SUCCESS 1`] = `
Object {
  "activePermissions": Object {
    "can_delete_manifest": undefined,
    "can_edit_organizations": undefined,
    "can_import_manifest": undefined,
    "can_manage_subscription_allocations": undefined,
  },
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 20,
  "loading": false,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 1,
    "perPage": 10,
  },
  "quantitiesLoading": false,
  "results": "some-results",
  "search": "some search",
  "searchIsActive": true,
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_TASK_SEARCH_FAILURE 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_TASK_SEARCH_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": Object {
    "humanized": Object {
      "action": "ManifestRefresh",
    },
    "id": "12345",
  },
}
`;

exports[`Subscriptions reducer should handle SUBSCRIPTIONS_UPDATE_SEARCH_QUERY 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "some-query",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle UPDATE_QUANTITY_FAILURE 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle UPDATE_QUANTITY_REQUEST 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": true,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle UPDATE_QUANTITY_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": Object {
    "humanized": Object {
      "action": "ManifestRefresh",
    },
    "id": "12345",
  },
}
`;

exports[`Subscriptions reducer should handle UPDATE_SUBSCRIPTION_COLUMNS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [
    "col1",
    "col2",
  ],
  "tableColumns": Array [],
  "task": null,
}
`;

exports[`Subscriptions reducer should handle UPLOAD_MANIFEST_SUCCESS 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": Object {
    "humanized": Object {
      "action": "ManifestRefresh",
    },
    "id": "12345",
  },
}
`;

exports[`Subscriptions reducer should return the initial state 1`] = `
Object {
  "availableQuantities": null,
  "deleteButtonDisabled": true,
  "deleteModalOpened": false,
  "hasUpstreamConnection": false,
  "itemCount": 0,
  "loading": true,
  "manifestActionStarted": false,
  "pagination": Object {
    "page": 0,
    "perPage": 20,
  },
  "quantitiesLoading": false,
  "results": Array [],
  "searchQuery": "",
  "selectedTableColumns": Array [],
  "tableColumns": Array [],
  "task": null,
}
`;
